syntax = "proto3";

package kessel.inventory.v1beta2.resources;

import "kessel/inventory/v1beta2/resources/resource.proto";
import "google/api/annotations.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2/resources";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2.resources";

message ReportResourceRequest {
  Resource resource = 1 [  json_name = "resource" ];
}

message ReportResourceResponse {}

message DeleteResourceRequest {
  string local_resource_id = 1;
  string reporter_type = 2;
}

message DeleteResourceResponse {}

service KesselResourceService {
  rpc ReportResource(ReportResourceRequest) returns (ReportResourceResponse) {
    option (google.api.http) = {
      post : "/api/inventory/v1beta2/resources"
      body : "*"
    };
  };

  rpc DeleteResource(DeleteResourceRequest) returns (DeleteResourceResponse) {
    option (google.api.http) = {
      delete : "/api/inventory/v1beta2/resources"
      body : "*"
    };
  };
}
